# NeuralNetworksLib

./: CMakeLists.txt  main.cpp
Include/: InputLayer.hpp  InputNeuron.hpp  Layer.hpp  NeuralNet.hpp  Neuron.hpp
Source/: InputLayer.cpp  InputNeuron.cpp  Layer.cpp  NeuralNet.cpp  Neuron.cpp
